<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="10dp"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_widget_mark" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/widget_name_short"
                android:textColor="@color/widget_text_primary"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widget_primary_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/widget_weekly"
                    android:textColor="@color/widget_text_muted"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/widget_primary_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical|end"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:maxWidth="96dp"
                    android:singleLine="true"
                    android:text="@string/widget_sample_primary"
                    android:textColor="@color/widget_text_primary"
                    android:textSize="25sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/widget_primary_progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:max="100"
                android:progress="64"
                android:progressDrawable="@drawable/widget_progress" />

            <TextView
                android:id="@+id/widget_primary_reset"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/widget_text_muted"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/widget_status_dot"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/widget_status_dot"
                android:textColor="@color/widget_status_success"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/widget_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/widget_sample_updated"
                android:textColor="@color/widget_text_muted"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/widget_status_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/widget_refresh"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="top|end"
        android:background="@drawable/widget_touch_background"
        android:contentDescription="@string/widget_refresh">

        <ImageView
            android:id="@+id/widget_refresh_icon"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_widget_refresh" />

        <ProgressBar
            android:id="@+id/widget_refresh_progress"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/widget_text_primary"
            android:visibility="gone" />
    </FrameLayout>
</FrameLayout>
